# nidaq

./: CMakeLists.txt  Doxyfile  Makefile  README.md  cont_daq.cfg  cont_daq_lf.cfg  data_challenge1b.cfg  nidaq.cfg  sequence.py  termination.cfg  tes.cfg  tes_trig.cfg
cfg/: NaI_baseline_monitor.cfg  NaI_scattering.cfg  NaI_scattering_cont.cfg  config.py  data_challenge1a.cfg  data_challenge1b.cfg  leiden_20200707.cfg  leiden_roger.cfg  nidaq.cfg  tes.cfg  tes_trig.cfg  test.cfg  test_h5access.cfg  test_trigger.cfg
h5limit/: h5limit.cfg  issue_file_number.txt
h5manager/: README.md
include/: AsciiRecorder.h  H5FileManager.h  H5Functions.h  HDF5Recorder.h  NIDAQFilter.h  NIDAQdata.h  NIFilter.h  NIdaq.h  RawRecorder.h  RedisRecorder.h
notebook/: Kamioka_NoiseMonitor.ipynb  adc_noise.ipynb  data_challeng_1a.ipynb  demo_hdf5.ipynb  display_psd.ipynb  display_waveform.ipynb  hdf5.ipynb  power_density_spectra.ipynb
readme/: README_NI 488_2.txt  README_NI DAQmx.txt  README_NI DMM.txt  README_NI FlexRIO.txt  README_NI PXI Platform Services.txt  README_NI SCOPE.txt  README_NI Serial.txt  README_NI Switch.txt  README_NI Sync.txt  README_NI System Configuration.txt  README_NI VISA.txt
src/: AsciiRecorder.cpp  H5FileManager.cpp  H5Functions.cpp  HDF5Recorder.cpp  NIDAQFilter.cpp  NIDAQdata.cpp  NIFilter.cpp  NIdaq.cpp  RawRecorder.cpp  RedisRecorder.cpp
test/: Makefile  attr_write.cpp  bin_write.cpp  grp_write.cpp  h5_skeleton.cpp  h5write.cpp  test_hdf5.cpp  test_type.cpp
test_h5/: Makefile  ds_write  ds_write.cpp  grp_write  h5_write.cpp  hello.h5  prof_h5_1x10.txt  (+3 more)
(+135 files in other folders)
